fix: reviews alignment

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -710,6 +710,11 @@ video {
   margin-right: auto;
 }
 
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 .\!mt-0 {
   margin-top: 0px !important;
 }
@@ -897,6 +902,10 @@ video {
   width: 7px;
 }
 
+.w-\[98\%\] {
+  width: 98%;
+}
+
 .w-auto {
   width: auto;
 }
@@ -908,14 +917,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[95\%\] {
-  width: 95%;
-}
-
-.w-\[98\%\] {
-  width: 98%;
 }
 
 .max-w-\[1170px\] {
@@ -1797,6 +1798,11 @@ video {
 @media (min-width: 768px) {
   .md\:absolute {
     position: absolute;
+  }
+
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .md\:block {
